--- a/Source/CriticalPath.Web/Views/PurchaseOrders/PartialDetails.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/PartialDetails.cshtml
@@ -2,6 +2,15 @@
 @using CriticalPath.Data
 @using CP.i8n
 @model PurchaseOrderVM
+@{
+    ViewBag.Title = EntityStrings.PurchaseOrder;
+
+    //Authorization Flags
+    bool canUserEdit = ViewBag.canUserEdit ?? false;
+    bool canUserCreate = ViewBag.canUserCreate ?? false;
+    bool canUserDelete = ViewBag.canUserDelete ?? false;
+    bool canSeeRestricted = ViewBag.canSeeRestricted ?? false;
+}
 
 @Html.Partial("_ICancellationPartial")
 <div class="row">
@@ -63,6 +72,22 @@
 </div>
 <div class="row">
     <label class="control-label col-md-2 col-sm-3 mb5">
+        @Html.DisplayNameFor(model => model.CustomerDepartment)
+    </label>
+    <div class="col-md-10 col-sm-9 mt5 fontSize150pc">
+        @Html.DisplayFor(m => m.CustomerDepartment)
+    </div>
+</div>
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3 mb5">
+        @Html.DisplayNameFor(model => model.Licensor)
+    </label>
+    <div class="col-md-10 col-sm-9 mt5 fontSize150pc">
+        @Html.DisplayFor(m => m.Licensor)
+    </div>
+</div>
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3 mb5">
         @Html.DisplayNameFor(model => model.Product)
     </label>
     <div class="col-md-10 col-sm-9 mt5 fontSize150pc">
@@ -85,14 +110,66 @@
         @Html.DisplayFor(m => m.Quantity)
     </div>
 </div>
-<div class="row">
+
+@if (canSeeRestricted)
+{
+    <div class="row mb5">
+        <label class="control-label col-md-2 col-sm-3 mb5">
+            @Html.DisplayNameFor(model => model.DiscountRate)
+        </label>
+        <div class="col-lg-8 col-md-9 col-sm-9 mt10">
+            @Html.DisplayFor(m => m.DiscountRate)
+        </div>
+    </div>
+    <div class="row mb5">
+        <label class="control-label col-md-2 col-sm-3 mb5">
+            @Html.DisplayNameFor(model => model.UnitPrice)
+        </label>
+        <div class="col-lg-8 col-md-9 col-sm-9 mt10">
+            @Html.DisplayFor(m => m.UnitPrice)
+            @Html.DisplayFor(m => m.SellingCurrency)
+        </div>
+    </div>
+    <div class="row mb5">
+        <label class="control-label col-md-2 col-sm-3 mb5">
+            @Html.DisplayNameFor(model => model.LicensorPrice)
+        </label>
+        <div class="col-lg-8 col-md-9 col-sm-9 mt10">
+            @Html.DisplayFor(m => m.LicensorPrice)
+            @Html.DisplayFor(m => m.LicensorCurrency)
+        </div>
+    </div>
+}
+<div class="row mb5">
     <label class="control-label col-md-2 col-sm-3 mb5">
-        @Html.DisplayNameFor(model => model.UnitPrice)
+        @Html.DisplayNameFor(model => model.BuyingPrice)
     </label>
-    <div class="col-md-10 col-sm-9 mt10">
-        @Html.DisplayFor(m => m.UnitPrice)
+    <div class="col-lg-8 col-md-9 col-sm-9 mt10">
+        @Html.DisplayFor(m => m.BuyingPrice)
+        @Html.DisplayFor(m => m.BuyingCurrency)
     </div>
 </div>
+@if (canSeeRestricted)
+{
+    <div class="row mb5">
+        <label class="control-label col-md-2 col-sm-3 mb5">
+            @Html.DisplayNameFor(model => model.RoyaltyFee)
+        </label>
+        <div class="col-lg-8 col-md-9 col-sm-9 mt10">
+            @Html.DisplayFor(m => m.RoyaltyFee)
+            @Html.DisplayFor(m => m.RoyaltyCurrency)
+        </div>
+    </div>
+    <div class="row mb5">
+        <label class="control-label col-md-2 col-sm-3 mb5">
+            @Html.DisplayNameFor(model => model.RetailPrice)
+        </label>
+        <div class="col-lg-8 col-md-9 col-sm-9 mt10">
+            @Html.DisplayFor(m => m.RetailPrice)
+            @Html.DisplayFor(m => m.RetailCurrency)
+        </div>
+    </div>
+}
 @Html.Partial("_PoSizeRatios")
 <div class="row mt15">
     <label class="control-label col-md-2 col-sm-3 mb5">
