--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/CustomerDepartment.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/CustomerDepartment.cshtml
@@ -7,5 +7,7 @@
 }
 @if (Model != null)
 {
-    <div><a href='/CustomerDepartments/Details/@Model.Id'>@Model.DepartmentName</a></div>
+    <div>
+        @Model.DepartmentName
+    </div>
 }
