--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Edit.cshtml
@@ -15,6 +15,8 @@
         @Html.HiddenFor(m => m.CustomerId)
         @Html.HiddenFor(m => m.ProductId)
         @Html.HiddenFor(m => m.ParentPoId)
+        @Html.HiddenFor(m => m.CustomerDepartmentId)
+        @Html.HiddenFor(m => m.LicensorId)
 
         @if (Model.Cancelled)
         {
