--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
@@ -19,18 +19,33 @@
     int pageSize = ViewBag.pageSize;
     int pageCount = ViewBag.pageCount;
 }
-<div class="row well">
-    <div class="col-md-8 col-sm-7">
-        <h4>@EntityStrings.PurchaseOrders</h4>
-    </div>
-    @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "searchForm" }))
-    {
+@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "searchForm" }))
+{
+    <div class="row well">
         @Html.Hidden("page", page)
+        @Html.Hidden("pageSize", pageSize)
+        <div class="col-sm-5 col-md-6">
+            <h3>@EntityStrings.PurchaseOrders</h3>
+        </div>
+        <div class="col-sm-2 text-right">
+            <div>
+                <label class="control-label mr10">
+                    @EntityStrings.IsApproved
+                </label>
+                @Html.CheckBox("IsApproved")
+            </div>
+            <div>
+                <label class="control-label mr10">
+                    @EntityStrings.Cancelled
+                </label>
+                @Html.CheckBox("Cancelled")
+            </div>
+        </div>
         <div class="col-md-4 col-sm-5">
             @Html.Partial("_SearchBoxPartial")
         </div>
-    }
-</div>
+    </div>
+}
 @if (totalCount > 0)
 {
     <table class="table table-hover table-striped">
@@ -41,8 +56,13 @@
                 @Html.DisplayNameFor(m => m.Cancelled)
             </th>
             <th>@Html.DisplayNameFor(model => model.PoNr)</th>
+            <th>@Html.DisplayNameFor(model => model.RefCode)</th>
             <th>@Html.DisplayNameFor(model => model.Product)</th>
-            <th>@Html.DisplayNameFor(model => model.Customer)</th>
+            <th>
+                @Html.DisplayNameFor(model => model.Customer) /<br />
+                @Html.DisplayNameFor(model => model.CustomerDepartment)
+            </th>
+            <th>@Html.DisplayNameFor(model => model.Licensor)</th>
             <th>@Html.DisplayNameFor(model => model.OrderDate)</th>
             @if (canSeeRestricted)
             {
@@ -50,7 +70,6 @@
                 <th>@Html.DisplayNameFor(model => model.DiscountRate)</th>
                 <th>@Html.DisplayNameFor(model => model.Quantity)</th>
                 <th>@Html.DisplayNameFor(model => model.UnitPrice)</th>
-                <th>Total</th>
             }
         </tr>
         @foreach (var item in Model)
@@ -114,8 +133,16 @@
                     }
                 </td>
                 <td>@Html.DisplayFor(modelItem => item.PoNr)</td>
+                <td>@Html.DisplayFor(modelItem => item.RefCode)</td>
                 <td>@Html.DisplayFor(modelItem => item.Product)</td>
-                <td>@Html.DisplayFor(modelItem => item.Customer)</td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Customer)
+                    @if (item.CustomerDepartment != null)
+                    {
+                        @Html.DisplayFor(modelItem => item.CustomerDepartment)
+                    }
+                </td>
+                <td>@Html.DisplayFor(modelItem => item.Licensor)</td>
                 <td align="right">@Html.DisplayFor(modelItem => item.OrderDate)</td>
                 @if (canSeeRestricted)
                 {
@@ -126,15 +153,10 @@
                         @Html.DisplayFor(modelItem => item.UnitPrice)
                         @Html.DisplayFor(modelItem => item.SellingCurrency)
                     </td>
-                    <td align="right">
-                        @(((item.UnitPrice * item.DiscountRate) / 100 * item.Quantity).ToString("###,###.00"))
-                        @Html.DisplayFor(modelItem => item.SellingCurrency)
-                    </td>
                 }
             </tr>
         }
     </table>
-    @Html.Partial("_PagerPartial")
     if (canUserDelete)
     {
         @Html.Partial("_MessageBoxPartial")
@@ -144,6 +166,7 @@ else
 {
     <h4>@MessageStrings.NoResults!</h4>
 }
+@Html.Partial("_PagerPartial")
 @section scripts{
     @Html.Partial("_IndexScriptsPartial", "PurchaseOrders")
 }
