--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/CurrencyDTO.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/CurrencyDTO.cshtml
@@ -1,11 +1,11 @@
 @using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CP.i8n
-@model Licensor
+@model CurrencyDTO
 @{
     Layout = null;
 }
 @if (Model != null)
 {
-    <div>@Model.CompanyName</div>
+    @: @Model.CurrencyCode
 }
