--- a/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>@Html.ActionLink(@EntityStrings.PurchaseOrders, "Index", "PurchaseOrders")</li>
+                        <li>@Html.ActionLink(@EntityStrings.CreateProduct, "Create", "Products")</li>
                         <li>@Html.ActionLink(@EntityStrings.CreatePurchaseOrder, "Create", "PurchaseOrders")</li>
                         <li class="divider"></li>
                         <li>@Html.ActionLink(@EntityStrings.Suppliers, "Index", "Suppliers")</li>
