--- a/Source/CriticalPath.Web/Views/PurchaseOrders/_ProductAutoComplete.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/_ProductAutoComplete.cshtml
@@ -22,6 +22,9 @@
     </div>
 </div>
 <script type="text/javascript">
+    var showSecondaryPrices = @Json.Encode(AppSettings.Settings.ShowSecondaryPrices);
+    var showRetailPrice = @Json.Encode(AppSettings.Settings.ShowRetailPrice);
+
     $('#ProductCode').autocomplete({
         minLenght: 1,
         delay: 500,
@@ -37,12 +40,28 @@
 
             $('#UnitPrice').val(fixDecimalVal(ui.item.UnitPrice));
             setSelectListID('#SellingCurrencyId > option', ui.item.SellingCurrencyId);
+
+            $('#LicensorPrice').val(fixDecimalVal(ui.item.LicensorPrice));
+            setSelectListID('#LicensorCurrencyId > option', ui.item.LicensorCurrencyId);
+
             $('#BuyingPrice').val(fixDecimalVal(ui.item.BuyingPrice));
             setSelectListID('#BuyingCurrencyId > option', ui.item.BuyingCurrencyId);
+
             $('#RoyaltyFee').val(fixDecimalVal(ui.item.RoyaltyFee));
             setSelectListID('#RoyaltyCurrencyId > option', ui.item.RoyaltyCurrencyId);
-            $('#RetailPrice').val(fixDecimalVal(ui.item.RetailPrice));
-            setSelectListID('#RetailCurrencyId > option', ui.item.RetailCurrencyId);
+
+            if(showRetailPrice){
+                $('#RetailPrice').val(fixDecimalVal(ui.item.RetailPrice));
+                setSelectListID('#RetailCurrencyId > option', ui.item.RetailCurrencyId);
+            }
+            if(showSecondaryPrices){
+                $('#UnitPrice2').val(fixDecimalVal(ui.item.UnitPrice2));
+                setSelectListID('#SellingCurrency2Id > option', ui.item.SellingCurrency2Id);
+                $('#BuyingPrice2').val(fixDecimalVal(ui.item.BuyingPrice2));
+                setSelectListID('#BuyingCurrency2Id > option', ui.item.BuyingCurrency2Id);
+            }
+
+            $('#Description').val(ui.item.Description);
 
             if (productId != null && productId != '') {
                 $.getJSON('/Suppliers/GetSupplierList', { productId: productId, pageSize: 100 }, function (suppliers) {
@@ -65,6 +84,28 @@
             if (ui.item==null) {
                 $(event.target).val('');
                 $('#ProductId').val('');
+                $('#UnitPrice').val('');
+                $('#LicensorPrice').val('');
+                $('#BuyingPrice').val('');
+                $('#RoyaltyFee').val('');
+                $('#Description').val('');
+
+                setSelectListID('#SellingCurrencyId > option', 0);
+                setSelectListID('#LicensorCurrencyId > option', 0);
+                setSelectListID('#BuyingCurrencyId > option', 0);
+                setSelectListID('#RoyaltyCurrencyId > option', 0);
+
+                if(showRetailPrice){
+                    $('#RetailPrice').val('');
+                    setSelectListID('#RetailCurrencyId > option', 0);
+                }
+                if(showSecondaryPrices){
+                    $('#UnitPrice2').val('');
+                    $('#BuyingPrice2').val('');
+
+                    setSelectListID('#BuyingCurrency2Id > option', 0);
+                    setSelectListID('#SellingCurrency2Id > option', 0);
+                }
             }
         },
         open: function (event, ui) {
