--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/FreightTermDTO.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/FreightTermDTO.cshtml
@@ -1,7 +1,7 @@
 @using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CP.i8n
-@model FreightTerm
+@model FreightTermDTO
 @{
     Layout = null;
 }
