--- a/Source/CriticalPath.Web/Views/Shared/_BaseLayout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_BaseLayout.cshtml
@@ -33,7 +33,7 @@
     @* Ends // favicon meta descriptions *@
     <title>@ViewBag.Title - Critical Path Application</title>
 
-    @Styles.Render(AppSettings.SelectedTheme)
+    @Styles.Render(AppSettings.Settings.SelectedTheme)
     @Styles.Render("~/css/ag-grid")
 
 
