--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
@@ -120,24 +120,28 @@
     <table class="table table-hover table-striped">
         <tr>
             <th class="hidden-print" width="20px">@ActionStrings.Action</th>
-            <th>
-                @Html.DisplayNameFor(model => model.IsApproved)<br />
-                @Html.DisplayNameFor(m => m.Cancelled)
+            <th title="Order Date / Cancel Status / Approve Status">
+                @Html.DisplayNameFor(model => model.OrderDate)<br />
+                Cancel/Appr.
             </th>
-            <th>@Html.DisplayNameFor(model => model.PoNr)</th>
-            <th>@Html.DisplayNameFor(model => model.RefCode)</th>
-            <th>@Html.DisplayNameFor(model => model.Product)</th>
-            <th>@Html.DisplayNameFor(model => model.Supplier)</th>
-            <th>
-                @Html.DisplayNameFor(model => model.Customer) /<br />
-                @Html.DisplayNameFor(model => model.CustomerDepartment)
-            </th>
-            <th>@Html.DisplayNameFor(model => model.Licensor)</th>
-            <th>@Html.DisplayNameFor(model => model.OrderDate)</th>
-            <th>@Html.DisplayNameFor(model => model.Quantity)</th>
             @if (canSeeRestricted)
             {
                 <th>@Html.DisplayNameFor(model => model.DueDate)</th>
+            }
+            <th>@Html.DisplayNameFor(model => model.Product)</th>
+            <th>
+                @Html.DisplayNameFor(model => model.PoNr)<br />
+                @Html.DisplayNameFor(model => model.RefCode)
+            </th>
+            <th>@Html.DisplayNameFor(model => model.Supplier)</th>
+            <th>
+                @Html.DisplayNameFor(model => model.Customer)<br />
+                @Html.DisplayNameFor(model => model.CustomerDepartment)
+            </th>
+            <th>@Html.DisplayNameFor(model => model.Licensor)</th>
+            <th>@Html.DisplayNameFor(model => model.Quantity)</th>
+            @if (canSeeRestricted)
+            {
                 <th>@Html.DisplayNameFor(model => model.DiscountRate)</th>
                 <th>@Html.DisplayNameFor(model => model.UnitPrice)</th>
             }
@@ -188,23 +192,37 @@
                         </ul>
                     </div>
                 </td>
-                <td>
+                <td align="right">
+                    @Html.DisplayFor(modelItem => item.OrderDate)
                     @if (item.Cancelled)
                     {
-                        <div style="min-width:112px" title="@EntityStrings.Cancelled">
-                            @Html.DisplayFor(modelItem => item.Cancelled) <span class="checkboxText">@Html.DisplayFor(i => item.CancelDate)</span>
+                        <div title="@EntityStrings.Cancelled">
+                            @Html.DisplayFor(modelItem => item.Cancelled)
+                            <span class="checkboxText">@Html.DisplayFor(i => item.CancelDate)</span>
                         </div>
                     }
-                    else
+                    @if (item.IsApproved)
                     {
-                        <div style="min-width:112px">
-                            @Html.DisplayFor(modelItem => item.IsApproved) <span class="checkboxText">@Html.DisplayFor(i => item.ApproveDate)</span>
+                        <div title="@EntityStrings.IsApproved">
+                            @Html.DisplayFor(modelItem => item.IsApproved)
+                            <span class="checkboxText">@Html.DisplayFor(i => item.ApproveDate)</span>
                         </div>
                     }
                 </td>
-                <td>@Html.DisplayFor(modelItem => item.PoNr)</td>
-                <td>@Html.DisplayFor(modelItem => item.RefCode)</td>
-                <td>@Html.DisplayFor(modelItem => item.Product)</td>
+                @if (canSeeRestricted)
+                {
+                    <td align="right">@Html.DisplayFor(modelItem => item.DueDate)</td>
+                }
+                <td>
+                    @Html.DisplayFor(modelItem => item.Product)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PoNr)
+                    @if (!string.IsNullOrEmpty(item.RefCode))
+                    {
+                        <br />@Html.DisplayFor(modelItem => item.RefCode)
+                    }
+                </td>
                 <td>@Html.DisplayFor(modelItem => item.Supplier)</td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Customer)
@@ -214,7 +232,6 @@
                     }
                 </td>
                 <td>@Html.DisplayFor(modelItem => item.Licensor)</td>
-                <td align="right">@Html.DisplayFor(modelItem => item.OrderDate)</td>
                 <td align="right">
                     @Html.DisplayFor(modelItem => item.Quantity)
                     @{
@@ -223,7 +240,6 @@
                 </td>
                 @if (canSeeRestricted)
                 {
-                    <td align="right">@Html.DisplayFor(modelItem => item.DueDate)</td>
                     <td align="right">@Html.DisplayFor(modelItem => item.DiscountRate)</td>
                     <td align="right">
                         @Html.DisplayFor(modelItem => item.UnitPrice)
@@ -232,28 +248,35 @@
                 }
             </tr>
                         }
-        <tr style="font-weight:bold;background-color:#fff8e8">
+        <tr class="bottom-row">
             <td class="hidden-print"></td>
-            <td colspan="6"></td>
-            <td align="right" colspan="2">Grand Total</td>
-            <td align="right">@grandTotal</td>
+            <td colspan="3">
+                Total Records: @totalCount
+                Seen: @Model.Count()
+            </td>
             @if (canSeeRestricted)
             {
                 <td></td>
+            }
+            <td></td>
+            <td align="right" colspan="2">Total Quantities</td>
+            <td align="right">@grandTotal.ToString("###,###")</td>
+            @if (canSeeRestricted)
+            {
                 <td></td>
                 <td></td>
             }
         </tr>
     </table>
-                        if (canUserDelete)
-                        {
-                            @Html.Partial("_MessageBoxPartial")
-                            }
-                        }
-                        else
-                        {
-                            <h4>@MessageStrings.NoResults!</h4>
-                        }
+    if (canUserDelete)
+    {
+        @Html.Partial("_MessageBoxPartial")
+    }
+}
+else
+{
+    <h4>@MessageStrings.NoResults!</h4>
+}
 @Html.Partial("_PagerPartial")
 @section scripts{
     @Html.Partial("_IndexScriptsPartial", "PurchaseOrders")
